# edger

./: .ai-memory.toml  .dockerignore  .gitignore  .gitleaksignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASING.md  SECURITY.md  deny.toml  edger.test.ts  edger.ts
.agents/plans/: cpanel-workers-prototype.md
.codex/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
charts/edger/: Chart.yaml  README.md  questions.yaml  values.yaml
crates/edger-core/: Cargo.toml
crates/edger-core/src/: admin.rs  config.rs  error.rs  execution.rs  isolate.rs  lib.rs  manifest.rs  principal.rs  wire.rs  worker_ref.rs
crates/edger-core/tests/: models_mapping.rs  traits_mock.rs  wire_roundtrip.rs
crates/edger-core/tests/fixtures/: sample_manifest.yaml
crates/edger-orchestrator/: Cargo.toml
crates/edger-orchestrator/src/: admin_api.rs  cron.rs  deploy.rs  lib.rs  manifest_index_stub.rs  manifest_loader.rs  metrics.rs  observability.rs  oidc.rs  pipeline.rs  server.rs  tracing_init.rs  worker_errors.rs
crates/edger-orchestrator/tests/: compat_matrix.rs  cron_scheduler_test.rs  deploy_install.rs  framework_compat.rs  kind_dispatch_integration.rs  limits_test.rs  manifest_loader.rs  metrics_endpoint.rs  observability_api.rs  perf_harness.rs  prewarm_reconcile.rs  security_operational.rs
crates/edger-orchestrator/tests/fixtures/manifests/: hello.yaml
crates/edger-worker/: Cargo.toml
crates/edger-worker/src/: ephemeral.rs  factory.rs  instance.rs  lru.rs  pool.rs
crates/edger-worker/tests/: body_limits.rs  cancel_safety.rs  pool_error_recovery.rs  pool_lru.rs  supervisor_lifecycle.rs
crates/edger-worker/tests/fixtures/: persistent.yaml  serverless.yaml  spa.yaml
docs/: README.adoc
docs/adr/: 0001-orquestrador-rust-sem-main-service-ts.md  0002-core-puro-e-crates-focadas.md  0003-extensoes-estaticas-via-crates.md  0004-js-ts-v1-via-deno-cli-bridge.md  0005-wasm-standalone-wasmtime-abi-v1.md  README.md
docs/business/: 01-visao-geral.adoc  02-glossario.adoc  03-jornadas-operacionais.adoc  04-escopo-e-roadmap.adoc  _index.adoc
docs/developers/: 01-arquitetura.adoc  02-modelo-de-dominio-e-manifests.adoc  03-contratos-http-e-workers.adoc  04-seguranca-e-isolamento.adoc  05-ambiente-local.adoc  06-operacao-e-testes.adoc  07-decisoes-arquiteturais.adoc  08-rancher-hpa-otel-lab.adoc  _index.adoc
edger-core/: Cargo.toml
edger-core/src/: admin.rs  api_key_store.rs  auth.rs  bindings.rs  config.rs  context.rs  execution.rs  extension.rs  isolate.rs  lib.rs  manifest.rs  principal.rs  security.rs  wire.rs  worker_ref.rs
edger-core/tests/: models_mapping.rs  traits_mock.rs
edger-core/tests/fixtures/: sample_manifest.yaml
edger-ext-auth/: Cargo.toml
edger-ext-auth/src/: lib.rs  store.rs
edger-ext-auth/tests/: auth_provider.rs
edger-ext-gateway/: Cargo.toml  README.md
edger-ext-gateway/src/: lib.rs
edger-ext-gateway/tests/: gateway_middleware.rs
edger-ext-keyval/: Cargo.toml
edger-ext-keyval/src/: lib.rs
edger-ext-keyval/tests/: external_provider_contract.rs  keyval_queue.rs
edger-ext-turso/: Cargo.toml
edger-ext-turso-remote/: Cargo.toml
edger-ext-turso-remote/src/: lib.rs
edger-ext-turso-remote/tests/: remote_provider.rs
edger-ext-turso/src/: lib.rs
edger-ext-turso/tests/: local_provider.rs
edger-isolation/: Cargo.toml
edger-isolation/examples/: embedding-spike-deno.rs  embedding-spike-wasm.rs
edger-isolation/src/: backend.rs  deno_sandbox_policy.rs  error.rs  fullstack.rs  kinds.rs  lib.rs  limits.rs  mock.rs  multiproc.rs  multiproc_harness.mjs  static_spa.rs  transport.rs  wire.rs
edger-isolation/src/deno/: bundle.rs  cli.rs  mod.rs
edger-isolation/src/wasm/: handler.rs  load.rs  mod.rs  wasi.rs
edger-isolation/tests/: backend_factory.rs  deno_bundler.rs  deno_sandbox.rs  limits_timeout.rs  mock_isolate.rs  resource_limits.rs  streaming.rs  uds_roundtrip.rs  wasm_integration.rs  wire_limits.rs
edger-isolation/tests/fixtures/multi_file_worker/: index.ts
edger-mcp/: Cargo.toml
edger-mcp/src/: contracts.rs  discovery.rs  lib.rs  main.rs
edger-mcp/tests/: protocol.rs
edger-orchestrator/: Cargo.toml
edger-orchestrator/src/: admin_api.rs  auth.rs  context.rs  cron.rs  deploy.rs  hooks.rs  lib.rs  manifest_index_stub.rs  manifest_loader.rs  metrics.rs  oidc.rs  operational_log.rs  pipeline.rs  rate_limit.rs  registry.rs  router.rs  security.rs  server.rs  service_bindings.rs  shell_gateway.rs  store.rs  tracing_init.rs  wire.rs
edger-orchestrator/tests/: admin_endpoints.rs  admin_workers_plugins.rs  auth_gate.rs  compat_matrix.rs  cron_scheduler_test.rs  deploy_install.rs  framework_compat.rs  gateway_integration.rs  health_integration.rs  kind_dispatch_integration.rs  limits_test.rs  manifest_loader.rs  metrics_endpoint.rs  observability_sse.rs  perf_harness.rs  pipeline_integration.rs  process_dispatch_integration.rs  registry_hooks.rs  registry_providers.rs  routing_resolution.rs  security_operational.rs  shell_gateway.rs  shell_routing_test.rs  state_services.rs  static_registration.rs  streaming_e2e.rs  value_parity.rs
edger-orchestrator/tests/fixtures/manifests/: acme-app.yaml
edger-worker/: Cargo.toml
edger-worker/src/: error.rs  factory.rs  instance.rs  lib.rs  lru.rs  metrics.rs  pool.rs  state.rs  supervisor.rs  types.rs
edger-worker/tests/: cancel_safety.rs  integration_pool.rs  metrics_ephemeral.rs  pool_ephemeral_concurrency.rs  pool_lru.rs  supervisor_lifecycle.rs  wasm_pool_integration.rs
edger-worker/tests/helpers/: mod.rs
follow-ups/: admin-endpoint-test-coverage.md  appshell-enforcement-frontend.md  appshell-iframe-composition.md  backpressure-bare-manifest-ephemeral.md  commonjs-worker-require.md  e20-deferred-tail.md  fallback-worker-routing.md  scoped-allownet-uds.md
planning/edger/: AGENTS.md  analysis-synthesis.md  design.md  intake.md  roadmap.md  runtime-functional-plan.md
workers/: package.json
(+757 files in other folders)
