[workspace]
resolver = "2"
members = [
  "edger-core",
  "edger-worker",
  "edger-isolation",
  "edger-orchestrator",
  # extensões futuras:
  # "edger-ext-gateway",
  # "edger-ext-auth",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/djalmajr/edger"
rust-version = "1.80"

[workspace.dependencies]
# dependências comuns (ex: hyper, tokio, etc. serão adicionadas conforme necessário)
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
bytes = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
thiserror = "2"
postcard = "1"
lru = "0.12"
wasmtime = "29"
wasmtime-wasi = "29"
wat = "1.252"
