[workspace]
resolver = "2"
members = [
  "crates/edger-core",
  "crates/edger-worker",
  "crates/edger-isolation",
  "crates/edger-orchestrator",
  "crates/edger-mcp",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/djalmajr/edger"
rust-version = "1.88"
homepage = "https://github.com/djalmajr/edger"
documentation = "https://github.com/djalmajr/edger/tree/main/docs"

[workspace.dependencies]
# dependências comuns (ex: hyper, tokio, etc. serão adicionadas conforme necessário)
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
bytes = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
futures-core = "0.3"
thiserror = "2"
postcard = "1"
lru = "0.16.3"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
http = "1"
hyper = { version = "1", features = ["full"] }
semver = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
libsql = { version = "0.10.0-pre.4", default-features = false, features = ["core", "remote", "sync", "tls"] }
sha2 = "0.10"
wasmtime = { version = "36.0.12", default-features = false, features = ["cranelift", "runtime", "std", "wat"] }
wasmtime-wasi = "36.0.12"
wat = "1.252"
