[package]
name = "edger-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Pure vocabulary crate: NO sibling crates, no I/O.
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
tracing.workspace = true
bytes.workspace = true
uuid.workspace = true
async-trait.workspace = true
futures-core.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }