[package]
name = "edger-ext-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
edger-core = { path = "../edger-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"