[package]
name = "edger-ext-keyval"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
edger-core = { path = "../edger-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
edger-ext-turso = { path = "../edger-ext-turso" }
edger-ext-turso-remote = { path = "../edger-ext-turso-remote" }
tempfile = "3"
