[package]
name = "edger-isolation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
edger-core = { path = "../edger-core" }
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wat.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "time"] }

[[example]]
name = "embedding-spike-wasm"
path = "examples/embedding-spike-wasm.rs"

[[example]]
name = "embedding-spike-deno"
path = "examples/embedding-spike-deno.rs"

[features]
default = []
# deno_core spike deferred — see spike.md sharp edges (V8 toolchain)
deno = []