[package]
name = "edger-isolation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
edger-core = { path = "../edger-core" }
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
bytes.workspace = true
thiserror.workspace = true
serde_json.workspace = true
postcard = { workspace = true, features = ["alloc"] }
tokio = { workspace = true, features = ["rt", "macros", "time"] }
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }
wat = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time"] }
tempfile = "3"
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wat.workspace = true

[[example]]
name = "embedding-spike-wasm"
path = "examples/embedding-spike-wasm.rs"

[[example]]
name = "embedding-spike-deno"
path = "examples/embedding-spike-deno.rs"

[features]
default = []
# Skeleton backends — no V8/wasmtime engine link in default CI build.
deno = []
wasm = ["dep:wasmtime", "dep:wasmtime-wasi", "dep:wat"]
multiproc = []