[package]
name = "edger-mcp"
version.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "MCP authoring and discovery tools for local EdgeR workers"
publish = false

[[bin]]
name = "edger-mcp"
path = "src/main.rs"

[dependencies]
edger-core = { path = "../edger-core" }
edger-orchestrator = { path = "../edger-orchestrator" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
