[package]
name = "edger-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "edger"
path = "src/bin/edger.rs"

[dependencies]
edger-core = { path = "../edger-core" }
edger-ext-auth = { path = "../edger-ext-auth" }
edger-ext-gateway = { path = "../edger-ext-gateway" }
edger-ext-keyval = { path = "../edger-ext-keyval" }
edger-ext-turso = { path = "../edger-ext-turso" }
edger-ext-turso-remote = { path = "../edger-ext-turso-remote" }
edger-worker = { path = "../edger-worker" }
edger-isolation = { path = "../edger-isolation", features = ["deno", "wasm"] }
anyhow.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
http.workspace = true
hyper.workspace = true
uuid.workspace = true
semver.workspace = true

[dev-dependencies]
tempfile = "3"
async-trait.workspace = true
edger-ext-auth = { path = "../edger-ext-auth" }
edger-isolation = { path = "../edger-isolation", features = ["deno", "wasm"] }
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
