[package]
name = "edger-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "edger"
path = "src/bin/edger.rs"

[dependencies]
edger-core = { path = "../edger-core" }
edger-ext-auth = { path = "../edger-ext-auth" }
edger-ext-keyval = { path = "../edger-ext-keyval" }
edger-ext-turso = { path = "../edger-ext-turso" }
edger-ext-turso-remote = { path = "../edger-ext-turso-remote" }
edger-worker = { path = "../edger-worker" }
edger-isolation = { path = "../edger-isolation", features = ["deno", "wasm", "multiproc"] }
anyhow.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio.workspace = true
axum.workspace = true
tower.workspace = true
futures-util = { version = "0.3", default-features = false }
tower-http.workspace = true
http.workspace = true
hyper.workspace = true
uuid.workspace = true
semver.workspace = true
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
tempfile = "3"

[dev-dependencies]
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
async-trait.workspace = true
edger-ext-auth = { path = "../edger-ext-auth" }
edger-isolation = { path = "../edger-isolation", features = ["deno", "wasm", "multiproc"] }
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
futures-util = { version = "0.3", default-features = false }
