[package]
name = "edger-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
edger-core = { path = "../edger-core" }
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
uuid.workspace = true
lru.workspace = true
thiserror.workspace = true
bytes.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "test-util", "time"] }
edger-isolation = { path = "../edger-isolation" }
serde_yaml.workspace = true
tempfile = "3"