[package]
name = "edger-worker"
version.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Worker pools, lifecycle and runtime metrics for EdgeR"
publish = false

[dependencies]
edger-core = { path = "../edger-core" }
edger-isolation = { path = "../edger-isolation" }
futures-core.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
uuid.workspace = true
lru.workspace = true
thiserror.workspace = true
bytes.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "test-util", "time"] }
edger-isolation = { path = "../edger-isolation", features = ["wasm"] }
serde_yaml.workspace = true
tempfile = "3"
wat.workspace = true
